--- a/package.json
+++ b/package.json
@@ -30,10 +30,5 @@
     "enzyme-to-json": "^3.3.4",
     "react-test-renderer": "^16.6.0"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
