--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.5",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.5.3"
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
