--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.5",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "stringquery": "^1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
